--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Santosh Prajapati - Portfolio</title>
     <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
-    <link rel="stylesheet" href="css/wow-effects.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/responsive-fixes.css">
-    <link rel="stylesheet" href="css/advanced-responsive-fixes.css">
-    <link rel="stylesheet" href="css/breakpoint-fixes.css">
+    <link rel="stylesheet" href="css/wow-effects.css">    <link rel="stylesheet" href="css/consolidated-responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
