--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="skill-category scroll-reveal slide-in-left">
                     <h3 class="split-text">Programming Languages</h3>
                     <div class="skills-grid">
-                        <div class="skill-item scroll-scale delay-1">
+                        <div class="skill-item card-3d scroll-scale delay-1">
                             <div class="skill-info">
                                 <h4>C#</h4>
                                 <p>95%</p>
@@ -138,7 +138,7 @@
                                 <div class="skill-level" style="width: 95%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-2">
+                        <div class="skill-item card-3d scroll-scale delay-2">
                             <div class="skill-info">
                                 <h4>Dart</h4>
                                 <p>90%</p>
@@ -147,7 +147,7 @@
                                 <div class="skill-level" style="width: 90%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-3">
+                        <div class="skill-item card-3d scroll-scale delay-3">
                             <div class="skill-info">
                                 <h4>Kotlin</h4>
                                 <p>85%</p>
@@ -156,7 +156,7 @@
                                 <div class="skill-level" style="width: 85%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-4">
+                        <div class="skill-item card-3d scroll-scale delay-4">
                             <div class="skill-info">
                                 <h4>Python</h4>
                                 <p>80%</p>
@@ -165,7 +165,7 @@
                                 <div class="skill-level" style="width: 80%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-5">
+                        <div class="skill-item card-3d scroll-scale delay-5">
                             <div class="skill-info">
                                 <h4>Java</h4>
                                 <p>75%</p>
@@ -174,7 +174,7 @@
                                 <div class="skill-level" style="width: 75%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-5">
+                        <div class="skill-item card-3d scroll-scale delay-5">
                             <div class="skill-info">
                                 <h4>C++</h4>
                                 <p>70%</p>
@@ -188,7 +188,7 @@
                 <div class="skill-category scroll-reveal slide-in-right">
                     <h3 class="split-text">Professional Skills</h3>
                     <div class="skills-grid">
-                        <div class="skill-item scroll-scale delay-1">
+                        <div class="skill-item card-3d scroll-scale delay-1">
                             <div class="skill-info">
                                 <h4>Mobile Development</h4>
                                 <p>95%</p>
@@ -197,7 +197,7 @@
                                 <div class="skill-level" style="width: 95%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-2">
+                        <div class="skill-item card-3d scroll-scale delay-2">
                             <div class="skill-info">
                                 <h4>Problem Solving</h4>
                                 <p>90%</p>
@@ -206,7 +206,7 @@
                                 <div class="skill-level" style="width: 90%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-3">
+                        <div class="skill-item card-3d scroll-scale delay-3">
                             <div class="skill-info">
                                 <h4>Cross-Platform Development</h4>
                                 <p>85%</p>
@@ -215,7 +215,7 @@
                                 <div class="skill-level" style="width: 85%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item scroll-scale delay-4">
+                        <div class="skill-item card-3d scroll-scale delay-4">
                             <div class="skill-info">
                                 <h4>Open Source Contribution</h4>
                                 <p>80%</p>
