--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1">
-    <title>Santosh Prajapati - Portfolio</title>
-    <link rel="stylesheet" href="css/modern-styles.css">
+    <title>Santosh Prajapati - Portfolio</title>    <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
-    <link rel="stylesheet" href="css/wow-effects.css">    <link rel="stylesheet" href="css/consolidated-responsive.css">
+    <link rel="stylesheet" href="css/wow-effects.css">    
+    <link rel="stylesheet" href="css/consolidated-responsive.css">
+    <link rel="stylesheet" href="css/alignment-fixes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
