--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Santosh Prajapati - Portfolio</title>
     <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
-    <link rel="stylesheet" href="css/wow-effects.css">    <link rel="stylesheet" href="css/consolidated-responsive.css">
+    <link rel="stylesheet" href="css/wow-effects.css">
+    <link rel="stylesheet" href="css/consolidated-responsive.css">
+    <link rel="stylesheet" href="css/github-stats.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -113,19 +115,18 @@
                         </div>
                     </div>
                     <a href="https://github.com/imnexerio" class="btn primary-btn magnetic" target="_blank">View GitHub Profile</a>
-                </div>
-                <div class="github-stats scroll-reveal slide-in-right delay-4 active">
+                    <div class="github-stats scroll-reveal slide-in-right delay-4">
                         <div class="github-stats-header">
                             <i class="fab fa-github"></i>
                             <h3>My GitHub Stats</h3>
                         </div>
                         <div class="github-stats-grid">
                             <div class="github-stat-item">
-                                <div class="github-stat-value" id="repo-count">19</div>
+                                <div class="github-stat-value" id="repo-count">-</div>
                                 <div class="github-stat-label">Repositories</div>
                             </div>
                             <div class="github-stat-item">
-                                <div class="github-stat-value" id="stars-count">2</div>
+                                <div class="github-stat-value" id="stars-count">-</div>
                                 <div class="github-stat-label">Stars</div>
                             </div>
                             <div class="github-stat-item">
@@ -133,14 +134,15 @@
                                 <div class="github-stat-label">Forks</div>
                             </div>
                             <div class="github-stat-item">
-                                <div class="github-stat-value" id="commits-count">500+</div>
+                                <div class="github-stat-value" id="commits-count">-</div>
                                 <div class="github-stat-label">Commits</div>
                             </div>
                         </div>
                         <div class="github-activity-chart" id="activity-chart">
-                            <div class="activity-grid" id="activity-grid"><div class="activity-col"><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-0"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-2"></div></div><div class="activity-col"><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div></div><div class="activity-col"><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-4"></div></div><div class="activity-col"><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-0"></div></div><div class="activity-col"><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-1"></div></div><div class="activity-col"><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-0"></div></div><div class="activity-col"><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-3"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div></div><div class="activity-col"><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-3"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-1"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-2"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-0"></div></div><div class="activity-col"><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-1"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div></div><div class="activity-col"><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-0"></div></div><div class="activity-col"><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-0"></div><div class="activity-cell activity-level-4"></div><div class="activity-cell activity-level-3"></div><div class="activity-cell activity-level-2"></div></div></div>
+                            <div class="activity-grid" id="activity-grid"></div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </section>
@@ -470,7 +472,10 @@
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>
 
     <!-- Scripts -->
+    <script src="js/github-config.js"></script>
+    <script src="js/github-stats.js"></script>
     <script src="js/optimized-main.js"></script>
+    <script src="js/github-stats.js"></script>
 		<script>
 			window.plausible =
 				window.plausible ||
