--- a/index.html
+++ b/index.html
@@ -153,106 +153,17 @@
         <div class="container parallax-content">
             <div class="section-header">
                 <h2 class="scroll-reveal">My Skills</h2>
-            </div>
-            <div class="skills-content">
+            </div>            <div class="skills-content">
                 <div class="skill-category scroll-reveal slide-in-left">
                     <h3 class="split-text">Programming Languages</h3>
                     <div class="skills-grid">
-                        <div class="skill-item card-3d scroll-scale delay-1">
-                            <div class="skill-info">
-                                <h4>C#</h4>
-                                <p>95%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 95%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-2">
-                            <div class="skill-info">
-                                <h4>Dart</h4>
-                                <p>90%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 90%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-3">
-                            <div class="skill-info">
-                                <h4>Kotlin</h4>
-                                <p>85%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 85%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-4">
-                            <div class="skill-info">
-                                <h4>Python</h4>
-                                <p>80%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 80%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-5">
-                            <div class="skill-info">
-                                <h4>Java</h4>
-                                <p>75%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 75%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-5">
-                            <div class="skill-info">
-                                <h4>C++</h4>
-                                <p>70%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 70%;"></div>
-                            </div>
-                        </div>
+                        <!-- Skills will be dynamically generated from GitHub data -->
                     </div>
                 </div>
                 <div class="skill-category scroll-reveal slide-in-right">
                     <h3 class="split-text">Professional Skills</h3>
                     <div class="skills-grid">
-                        <div class="skill-item card-3d scroll-scale delay-1">
-                            <div class="skill-info">
-                                <h4>Mobile Development</h4>
-                                <p>95%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 95%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-2">
-                            <div class="skill-info">
-                                <h4>Problem Solving</h4>
-                                <p>90%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 90%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-3">
-                            <div class="skill-info">
-                                <h4>Cross-Platform Development</h4>
-                                <p>85%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 85%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item card-3d scroll-scale delay-4">
-                            <div class="skill-info">
-                                <h4>Open Source Contribution</h4>
-                                <p>80%</p>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-level" style="width: 80%;"></div>
-                            </div>
-                        </div>
+                        <!-- Professional skills will be dynamically generated from GitHub data -->
                     </div>
                 </div>
             </div>
@@ -469,13 +380,10 @@
     </div>
 
     <!-- Back to Top Button -->
-    <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>
-
-    <!-- Scripts -->
+    <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
     <script src="js/github-config.js"></script>
     <script src="js/github-stats.js"></script>
     <script src="js/optimized-main.js"></script>
-    <script src="js/github-stats.js"></script>
 		<script>
 			window.plausible =
 				window.plausible ||
