--- a/index.html
+++ b/index.html
@@ -24,8 +24,25 @@
         <div class="theme-btn dark" data-theme="dark" title="Dark Theme">
             <i class="fas fa-moon"></i>
         </div>
-        <div class="theme-btn purple" data-theme="purple" title="Purple Theme">
+        <div class="theme-btn purple" data-theme="custom" title="Custom Theme">
             <i class="fas fa-palette"></i>
+            <div class="color-palette">
+                <div class="color-palette-header">Choose a color</div>
+                <div class="color-options">
+                    <div class="color-option" data-color="#9d4edd" style="background-color: #9d4edd;"></div>
+                    <div class="color-option" data-color="#ff6b6b" style="background-color: #ff6b6b;"></div>
+                    <div class="color-option" data-color="#4cc9f0" style="background-color: #4cc9f0;"></div>
+                    <div class="color-option" data-color="#f72585" style="background-color: #f72585;"></div>
+                    <div class="color-option" data-color="#4361ee" style="background-color: #4361ee;"></div>
+                    <div class="color-option" data-color="#fb8500" style="background-color: #fb8500;"></div>
+                    <div class="color-option" data-color="#43aa8b" style="background-color: #43aa8b;"></div>
+                    <div class="color-option" data-color="#f94144" style="background-color: #f94144;"></div>
+                </div>
+                <div class="custom-color-input">
+                    <input type="color" id="custom-color-picker" value="#9d4edd">
+                    <label for="custom-color-picker">Custom</label>
+                </div>
+            </div>
         </div>
         <div class="theme-btn green" data-theme="green" title="Green Theme">
             <i class="fas fa-leaf"></i>
