--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </div>
         <div class="theme-btn dark" data-theme="dark" title="Dark Theme">
             <i class="fas fa-moon"></i>
-        </div>
-        <div class="theme-btn purple" data-theme="custom" title="Custom Theme">
+        </div>        <div class="theme-btn purple" data-theme="custom" title="Custom Theme">
             <i class="fas fa-palette"></i>
             <div class="color-palette">
                 <div class="color-palette-header">Choose a color</div>
@@ -43,9 +42,6 @@
                     <label for="custom-color-picker">Custom</label>
                 </div>
             </div>
-        </div>
-        <div class="theme-btn green" data-theme="green" title="Green Theme">
-            <i class="fas fa-leaf"></i>
         </div>
     </div>
 
