adding website creating button t3

--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
     <script src="js/github-config.js"></script>
     <script src="js/github-stats.js"></script>
-    <script src="js/optimized-main.js"></script>
-		<script>
+    <script src="js/optimized-main.js"></script>		<script>
 			window.plausible =
 				window.plausible ||
 				function () {
@@ -330,10 +329,12 @@
 			})
 		</script>
         
-    </body>    <div class="website-creator wow-button">
-        <div class="website-creator-btn create" wow-button title="create for yourself">
+    <!-- Website Creator Attribution -->
+    <div class="website-creator">
+        <div class="website-creator-btn create" title="create for yourself">
             <i class="fas fa-code"></i>
-            <span class="creator-hover-text">Developed by imnexerio - Get for yourself!</span>
+            <span class="creator-text">Developed by imnexerio - Get for yourself!</span>
         </div>
     </div>
+    </body>
 </html>
