--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
                 </div>
                 <div class="footer-social scroll-reveal">
                     <a href="https://github.com/imnexerio" target="_blank" title="GitHub" class="magnetic"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank" title="LinkedIn" class="magnetic"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" target="_blank" title="Twitter" class="magnetic"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank" title="Instagram" class="magnetic"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/imnexerio/" target="_blank" title="LinkedIn" class="magnetic"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.twitter.com/imnexerio/" target="_blank" title="Twitter" class="magnetic"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/imnexerio/" target="_blank" title="Instagram" class="magnetic"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-bottom">
