adding website creating button t8

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
             <div class="section-header">
                 <h2 class="scroll-reveal">About Me</h2>
             </div>
-            <div class="about-content">
-                <div class="about-image scroll-reveal slide-in-left">
+            <div class="about-content">                <div class="about-image scroll-reveal slide-in-left">
                     <div class="card-3d">
                         <div class="card-3d-inner">
                             <img src="images/profile.jpg" alt="Santosh Prajapati">
