--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
                 <div class="hero-buttons scroll-reveal delay-3">
                     <a href="#portfolio" class="btn primary-btn magnetic">View My Work</a>
                     <a href="#contact" class="btn secondary-btn magnetic">Contact Me</a>
-                </div>
-                <div class="social-icons scroll-reveal delay-4">
+                </div>                <div class="social-icons scroll-reveal delay-4">
                     <a href="https://github.com/imnexerio" target="_blank" title="GitHub" class="magnetic"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank" title="LinkedIn" class="magnetic"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" target="_blank" title="Twitter" class="magnetic"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank" title="Instagram" class="magnetic"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/imnexerio/" target="_blank" title="LinkedIn" class="magnetic"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.twitter.com/imnexerio/" target="_blank" title="Twitter" class="magnetic"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/imnexerio/" target="_blank" title="Instagram" class="magnetic"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
