adding website creating button t10

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="about-content">                <div class="about-image scroll-reveal slide-in-left">
                     <div class="card-3d">
                         <div class="card-3d-inner">
-                            <img src="images/profile.jpg" alt="Santosh Prajapati">
+                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Crect width='200' height='200' fill='%23f0f0f0'/%3E%3Ctext x='50%25' y='50%25' font-size='24' text-anchor='middle' dominant-baseline='middle' fill='%23999'%3ELoading...%3C/text%3E%3C/svg%3E" alt="Santosh Prajapati" id="profile-image">
                         </div>
                     </div>
                 </div>
