--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1">
+    <meta name="env-PAT_GITHUB" content="__PAT_GITHUB__">
     <title>GitHub Portfolio</title>    <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
     <link rel="stylesheet" href="css/wow-effects.css">
