--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
-    <meta charset="UTF-8">
+<head>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1">
-    <title>GitHub Portfolio</title>    <link rel="stylesheet" href="css/modern-styles.css">
+    <title>GitHub Portfolio</title>
+    <!-- Favicon will be dynamically set from GitHub avatar -->
+    <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
     <link rel="stylesheet" href="css/wow-effects.css">
     <link rel="stylesheet" href="css/consolidated-responsive.css">
