--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                         </div>
                     </div>
                 </div>                <div class="about-text scroll-reveal slide-in-right">
-                    <h3 class="split-text">Who am I?</h3>
-                    <p id="user-bio">I am a passionate developer with expertise in software development. With experience in multiple programming languages and platforms, I've worked on various projects that have helped me develop a strong skill set.</p>
-                    <p>My approach to work combines creativity, technical knowledge, and problem-solving abilities to deliver high-quality results. I'm constantly learning and adapting to new technologies and methodologies.</p><div class="personal-info stagger-container">
+                    <h3 class="split-text">Who am I?</h3>                    <p id="user-bio">Loading bio from GitHub...</p>
+                    <p id="user-bio-continued"></p>
+                    <div class="personal-info stagger-container">
                         <div class="info-item stagger-item">
                             <span class="info-title">Name:</span>
                             <span class="info-value">GitHub User</span>
