--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Scroll Progress Indicator -->
-    <div class="scroll-progress"></div>    <!-- Theme Switcher -->
+<!--    <div class="scroll-progress"></div>    &lt;!&ndash; Theme Switcher &ndash;&gt;-->
     <div class="theme-switcher">
         <div class="theme-btn toggle-theme" data-theme="light" title="Toggle Light/Dark Theme">
             <i class="fas fa-sun"></i>
