--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
                 <!-- Content will be dynamically inserted here -->
             </div>
         </div>
-    </div>
-
-    <!-- Back to Top Button -->
+    </div>    <!-- Back to Top Button -->
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
+    <!-- Environment variable loader for local development -->
+    <script src="js/env-loader.js"></script>
     <script src="js/github-config.js"></script>
     <script src="js/github-stats.js"></script>
     <script src="js/optimized-main.js"></script>
