--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- Favicon will be dynamically set from GitHub avatar -->
     <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/advanced-animations.css">
-    <link rel="stylesheet" href="css/wow-effects.css">    <link rel="stylesheet" href="css/consolidated-responsive.css">
-    <link rel="stylesheet" href="css/github-stats.css">
+    <link rel="stylesheet" href="css/wow-effects.css">    <link rel="stylesheet" href="css/consolidated-responsive.css">    <link rel="stylesheet" href="css/github-stats.css">
     <link rel="stylesheet" href="css/website-generator.css">
     <link rel="stylesheet" href="css/github-readme.css">
+    <link rel="stylesheet" href="css/readme-preview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -300,10 +300,10 @@
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
     <!-- Environment variable loader for local development -->
     <script src="js/env-loader.js"></script>
-    <script src="js/github-config.js"></script>
-    <script src="js/github-stats.js"></script>
+    <script src="js/github-config.js"></script>    <script src="js/github-stats.js"></script>
     <script src="js/optimized-main.js"></script>
     <script src="js/social-links.js"></script>
+    <script src="js/readme-preview.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="js/website-generator.js"></script>
     <script>
