--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
     <!-- Environment variable loader for local development -->
     <script src="js/env-loader.js"></script>
-    <script src="js/github-config.js"></script>    <script src="js/github-stats.js"></script>
-    <script src="js/optimized-main.js"></script>
+    <script src="js/github-config.js"></script>    <script src="js/github-stats.js"></script>    <script src="js/optimized-main.js"></script>
     <script src="js/social-links.js"></script>
+    <script src="js/modal-override.js"></script>
     <script src="js/readme-preview.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="js/website-generator.js"></script>
