--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Scroll Progress Indicator -->
     <div class="scroll-progress"></div>    <!-- Theme Switcher -->
     <div class="theme-switcher">
-        <div class="theme-btn toggle-theme" data-theme="light" title="Toggle Light/Dark Theme">
+        <div class="theme-btn toggle-theme magnetic" data-theme="light" title="Toggle Light/Dark Theme">
             <i class="fas fa-sun"></i>
             <i class="fas fa-moon" style="display: none;"></i>
         </div>
-        <div class="theme-btn purple" data-theme="custom" title="Custom Theme">
+        <div class="theme-btn purple magnetic" data-theme="custom" title="Custom Theme">
             <i class="fas fa-palette"></i>
             <div class="color-palette">
                 <div class="color-palette-header">Choose a color</div>
