--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="contact-form scroll-reveal slide-in-right">
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://formspree.io/f/xzzrwvzp" method="POST">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
                         </div>
@@ -249,6 +249,7 @@
                         </div>
                         <button type="submit" class="btn primary-btn magnetic">Send Message</button>
                     </form>
+                    <div id="form-status" class="form-status"></div>
                 </div>
             </div>
         </div>
