--- a/index.html
+++ b/index.html
@@ -232,9 +232,8 @@
                             <p>Public Repositories</p>
                         </div>
                     </div>
-                </div>
-                <div class="contact-form scroll-reveal slide-in-right">
-                    <form id="contactForm" action="https://formspree.io/f/xzzrwvzp" method="POST">
+                </div>                <div class="contact-form scroll-reveal slide-in-right">
+                    <form id="contactForm" action="#" method="POST">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
                         </div>
