--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                     <!-- Social media links will be dynamically inserted here -->
                 </div>
             </div>            <div class="footer-bottom">
-                <p class="scroll-reveal">&copy; <span id="current-year">2025</span> <span class="github-username">GitHub User</span>. All Rights Reserved.</p>
-                <p class="scroll-reveal last-updated">Data last updated: <span id="last-updated-date">Loading...</span></p>
+                <p>&copy; <span id="current-year">2025</span> <span class="github-username">GitHub User</span>. All Rights Reserved.</p>
+                <p class="last-updated">Data last updated: <span id="last-updated-date">Loading...</span></p>
             </div>
         </div>
     </footer>
