--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 </div>
             </div>            <div class="footer-bottom">
                 <p>&copy; <span id="current-year">2025</span> imnexerio. All Rights Reserved.</p>
+                <p class="version-info">Version 1.0.0</p>
                 <p class="last-updated">Data last updated: <span id="last-updated-date">Loading...</span></p>
             </div>
         </div>
