--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                 </div>                <div class="contact-form scroll-reveal slide-in-right">
-                    <form id="contactForm" action="#" method="POST">
+                    <form id="contactForm" action="#" method="POST" data-formspree-id="your-formspree-id">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
                         </div>
@@ -295,7 +295,12 @@
     </div>    <!-- Back to Top Button -->
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
     <!-- Environment variable loader for local development -->
-    <script src="js/env-loader.js"></script>    <script src="js/github-config.js"></script>    <script src="js/github-stats.js"></script>    <script src="js/optimized-main.js"></script>
+    <!-- Environment variables will be dynamically loaded from GitHub Actions or .env.js -->
+    <script src="env.js"></script>
+    <script src="js/env-loader.js"></script>
+    <script src="js/github-config.js"></script>
+    <script src="js/github-stats.js"></script>
+    <script src="js/optimized-main.js"></script>
     <script src="js/social-links.js"></script>
     <script src="js/readme-preview.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
