--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
         </div>
     </div>    <!-- Back to Top Button -->
     <a href="#" class="back-to-top magnetic" title="Back to Top"><i class="fas fa-arrow-up"></i></a>    <!-- Scripts -->
+    <!-- Environment variables will be dynamically loaded from GitHub Actions or .env.js -->
+    <script src="env.js"></script>
     <script src="js/env-loader.js"></script>
     <script src="js/github-config.js"></script>
     <script src="js/github-stats.js"></script>
