update footer with new version and link to GitHub

--- a/index.html
+++ b/index.html
@@ -276,9 +276,10 @@
                 <div class="footer-social social-icons scroll-reveal">
                     <!-- Social media links will be dynamically inserted here -->
                 </div>
-            </div>            <div class="footer-bottom">
-                <p>&copy; <span id="current-year">2025</span> imnexerio. All Rights Reserved.</p>
-                <p class="version-info">Version 1.0.1</p>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; <span id="current-year">2025</span> <a href="https://github.com/imnexerio" target="_blank" style="color: inherit; text-decoration: underline;">imnexerio</a>. All Rights Reserved.</p>
+                <p class="version-info">Version 1.0.2</p>
                 <p class="last-updated">Data last updated: <span id="last-updated-date">Loading...</span></p>
             </div>
         </div>
